<resources>
    <string name="app_name">NoteStick</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">My Notes</string>
    <string name="tab_text_2">Calendar</string>
    <string name="tab_text_3">More</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyDate">17</string>
    <string name="dummyMonth">May</string>
    <string name="dummyYear">2019</string>
    <string name="dummyTime">2:09 pm</string>
    <string name="dummyTitle">First note</string>
    <string name="dummyContent">this is a dummy content. This is a dummy content</string>
    <string name="dummyDay">Tuesday</string>
    <string name="NoteEditor">Note editor</string>
    <string name="TitleHint">Title</string>
    <string name="New_note_content_hint">Write here...</string>
    <string name="Image_Directory_Name">NoteStick</string>
    <string name="save_munu_title">Save Note</string>
    <string name="save_munu_title_mini">Save Note</string>
    <string name="Save_snackbar_msg">Saved..</string>
    <string name="delete_image_title">Remove</string>
    <string name="change_image_title_gallery">Change using storage</string>
    <string name="change_image_title_camera">Change using camera</string>
    <string name="delete_confirm_title">Delete?</string>
    <string name="save_confirm_title">Save?</string>
    <string name="delete_confirm_description">Do you want to delete this note permanently?</string>
    <string name="save_confirm_description">Do you want to save the changes made to this
        note?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="search_title">Search</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="ChoseNoteDialogTitle">Select one note</string>
</resources>
