<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CRUDnote.CRUDnoteView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            >

            <RelativeLayout
                android:id="@+id/mainRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/noteheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_anchorGravity="bottom">

                    <TextView
                        android:id="@+id/date"
                        style="@style/date_new_note_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/dummyDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/month"
                        style="@style/month_new_note_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/dummyMonth"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/date" />

                    <TextView
                        android:id="@+id/year"
                        style="@style/year_new_note_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/dummyYear"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/month" />

                    <TextView
                        android:id="@+id/day"
                        style="@style/day_new_note_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/dummyDay"
                        app:layout_constraintBottom_toTopOf="@id/month"
                        app:layout_constraintStart_toEndOf="@id/date" />

                    <TextView
                        android:id="@+id/time"
                        style="@style/day_new_note_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/dummyTime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/noteheader"
                    android:layout_marginLeft="@dimen/NormalTopMargin"
                    android:layout_marginRight="@dimen/NormalTopMargin"
                    android:layout_marginBottom="@dimen/TitleVerticalMargin"
                    android:hint="@string/TitleHint">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@drawable/crud_note_title_text_color"
                        android:background="@drawable/crud_note_title_text_layout_back_ground"

                        />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/NoteEditor"
                >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.rove.notestick.CustomViews.TextImageLayout
            android:id="@+id/cotentlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/content_new_note_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.rove.notestick.CustomViews.TextImageLayout>
    </androidx.core.widget.NestedScrollView>


    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/addsticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:sdMainFabClosedSrc="@drawable/fab_attach"
        app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>